refactor(report): Moved unsubscription to task router
+ added integrity check
