# src/report/openapi.json
@@ -1463,6 +1463,167 @@
         "description": "Trigger generation of report. Accessible to READ_WRITE."
       }
     },
+    "/tasks/{taskId}/unsubscribe": {
+      "put": {
+        "summary": "Unsubscribe from task",
+        "operationId": "post-tasks-taskId-unsubscribe",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "x-examples": {
+                    "example-1": {
+                      "status": {
+                        "code": 200,
+                        "message": "OK"
+                      },
+                      "content": {
+                        "name": "generateReports",
+                        "running": true,
+                        "nextRun": "2022-11-16T09:10:00.000Z",
+                        "lastRun": "2022-11-16T09:09:59.248Z"
+                      }
+                    }
+                  },
+                  "properties": {
+                    "status": {
+                      "type": "object",
+                      "properties": {
+                        "code": {
+                          "type": "integer"
+                        },
+                        "message": {
+                          "type": "string"
+                        }
+                      }
+                    },
+                    "content": {
+                      "$ref": "#/components/schemas/FullTask"
+                    }
+                  }
+                },
+                "examples": {
+                  "Example": {
+                    "value": {
+                      "status": {
+                        "code": 20,
+                        "message": "OK"
+                      },
+                      "content": {
+                        "id": "0000a00a-aaa0-0000-a0aa-000a0a0aa000",
+                        "name": "My Super Task",
+                        "institution": "institution:aaaa0000-0000-00aa-aa00-aa00a0aa000a",
+                        "layout": {
+                          "...": "..."
+                        },
+                        "targets": [
+                          "..."
+                        ],
+                        "recurrence": "WEEKLY",
+                        "nextRun": "2022-10-31T10:00:00.000Z",
+                        "lastRun": "2022-10-31T10:00:00.000Z",
+                        "enabled": true,
+                        "history": [
+                          {
+                            "id": "0cc0c0cc-ccc0-00cc-0c00-c0c000000000",
+                            "taskId": "0000a00a-aaa0-0000-a0aa-000a0a0aa000",
+                            "type": "edition",
+                            "message": "Tâche crée par ...",
+                            "date": "2022-11-07T15:06:24.000Z"
+                          },
+                          {
+                            "id": "0cc0c0cc-ccc0-00cc-0c00-c0c000000001",
+                            "taskId": "0000a00a-aaa0-0000-a0aa-000a0a0aa000",
+                            "type": "edition",
+                            "message": "Tâche éditée par ...",
+                            "date": "2022-11-07T15:08:37.000Z"
+                          },
+                          {
+                            "id": "0cc0c0cc-ccc0-00cc-0c00-c0c000000002",
+                            "taskId": "0000a00a-aaa0-0000-a0aa-000a0a0aa000",
+                            "type": "generation-error",
+                            "message": "Rapport \"...\" non généré par ... suite à une erreur.",
+                            "date": "2022-11-07T15:16:37.000Z"
+                          },
+                          {
+                            "id": "0cc0c0cc-ccc0-00cc-0c00-c0c000000003",
+                            "taskId": "0000a00a-aaa0-0000-a0aa-000a0a0aa000",
+                            "type": "generation-success",
+                            "message": "Rapport \"...\" généré par ...",
+                            "date": "2022-11-07T15:17:49.000Z"
+                          }
+                        ],
+                        "createdAt": "2022-10-25T11:55:47.375Z",
+                        "updatedAt": "2022-10-25T11:55:47.375Z"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        },
+        "description": "Shorthand to remove given email in given task",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "unsubId": {
+                    "type": "string",
+                    "description": "The id given in mail"
+                  },
+                  "email": {
+                    "type": "string",
+                    "format": "email",
+                    "description": "The mail address"
+                  }
+                },
+                "required": [
+                  "unsubId",
+                  "email"
+                ]
+              },
+              "examples": {
+                "Example": {
+                  "value": {
+                    "unsubId": "YWY1NDk2MjYtNjQxYi00NGVkLTkzODEtZjNiNzUxMzcwMTY0%3AdG9tLnN1YmxldEBpbmlzdC50ZXN0LmZy",
+                    "email": "user@example.com"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "tasks"
+        ]
+      },
+      "parameters": [
+        {
+          "schema": {
+            "type": "string"
+          },
+          "name": "taskId",
+          "in": "path",
+          "required": true,
+          "description": "The task id"
+        }
+      ]
+    },
     "/reports/{path}": {
       "parameters": [
         {
@@ -2794,6 +2955,48 @@
           }
         ]
       }
+    },
+    "/unsubscribe/{unsubId}": {
+      "parameters": [
+        {
+          "schema": {
+            "type": "string"
+          },
+          "name": "unsubId",
+          "in": "path",
+          "required": true,
+          "description": "The unsubscribtion id given in mail"
+        }
+      ],
+      "get": {
+        "summary": "Get unsubscribe form",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/html": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        },
+        "operationId": "get-unsubscribe-unsubId",
+        "description": "Get unsubscribe form to be removed from task targets.",
+        "tags": [
+          "general"
+        ]
+      }
     }
   },
   "components": {
@@ -2989,7 +3192,8 @@
                 "description": "Emails target",
                 "minItems": 1,
                 "items": {
-                  "type": "string"
+                  "type": "string",
+                  "format": "email"
                 }
               },
               "history": {
